--- a/views/registerView.html
+++ b/views/registerView.html
@@ -18,14 +18,15 @@
 			
 			<!-- Seccion para colocar el logo -->
 			<div id="hero">
-				<img src="img/system/hero.png" alt="">
+				<a href="?slug=landing">
+					<img src="img/system/hero.png" alt="">
+				</a>
 			</div>
 
 			<!-- Sección para colocar los botones de login / register / cerrar sesión / menú -->
 			<div id="control">
-				
+			
 				<a href="?slug=login" class="btn_login">Login</a>
-				<a href="?slug=register" class="btn_register">Register</a>
 
 			</div>
 
@@ -40,13 +41,21 @@
 				
 				<!-- sección izquierda para la imagen -->
 				<div id="imagen">	
-					<img src="img/landing.svg" alt="">
+					<img src="img/system/register.svg" alt="">
 				</div>
 			
 				<!-- Seccion derecha para la explicación -->
 				<div id="description">
-					<h1>Bienvenido a los apuntes X</h1>
-					<h2>Ya somos {{CANT_USUARIOS}} usuarios compartiendo {{CANT_APUNTES}} apuntes</h2>
+					<h1>Registrarse</h1>
+					<form action="" method="POST">
+
+						<div class="error_form">{{MSG_ERROR_FORM}}</div>
+						
+						<input type="email" placeholder="email" name="txt_email" required>
+						<input type="password" placeholder="password" name="txt_pass" required>
+						<input type="submit" name="btn_registrar" value="registrarme">
+
+					</form>
 				</div>
 
 			</div>
