ticket #0004 FEAT AND REFACTOR
+ panelController.php se pasa a la vista el apellido del usuario.
+ perfilController.php se desarrollo la lógica para que se pueda modificar los datos del usuario.
+ registerController.php si el usuario ya estaba en el sistema pero se le había aplicado soft delete ahora pueda volver a registrarse (activar su cuenta).
+ index.php se agrego a la lista de secciones permitidas para usuario logueado abandonar.
+ DBAbstract.php se creo el metodo conectar con el contenido del constructor y este ahora llama a conectar. el metodo consultar ahora utiliza conectar, se cambio la forma en que se reconoce la primer palabra de la consulta mysql.
+ User.php se quito los atributos y se implemento auto carga de atributos basandose en las columnas de la tabla a la que se representa. Se creo el metodo update para actualizar los datos del usuario. Login ahora valida que el usuario no haya sufrido soft delete. Register se detecta si el usuario había abandonado o no y luego lo registra. Se creo el metodo leaveOut para hacer soft delete sobre un usuario. getCantUser solo cuenta los usuarios activos
+ panelView.html muestra el apellido.
+ perfilView.html en el css se coloco semilla aleatoria para evitar la cache y se agrego el popup con js para hacerlo dinamico.
+ styles.css se ordeno las reglas.
* abandonarController se creo para hacer soft delete del usuario logueado.

--- a/views/panelView.html
+++ b/views/panelView.html
@@ -47,7 +47,7 @@
 				<div id="description">
 					<h1>Bienvenido:</h1>
 					<div id="user_name">{{USER_NAME}}</div>
-					<div id="user_name">{{USER_ID}}</div>
+					<div id="user_last_name">{{USER_LAST_NAME}}</div>
 				</div>
 
 			</div>
