ticket #0005 FEAT AND REFACTOR
+ abandonarController.php se quito slug.
+ loginController.php se quito slug.
+ logoutController.php se quito slug.
+ perfilController.php se agrego avatar.
+ registerController.php se agrego que al registrarse se loguee, se quito slug.
+ index.php se detecta si slug no tiene valor entonces muestra por defecto landing.
+ User.php se creo $attributes para almacenar los nombres de los campo de mysql, en login se agrego autocarga de valores en atributos, se agrego al agregar usuario se le asigne un avatar por defecto (robohash).
+ landingView.html se quito slug.
+ loginView.html se quito slug.
+ perfilView.html se quito slug
+ registerVier.html se quito slug.
* .htaccess se creo para embellecer las urls (ofuscar)

--- a/views/landingView.html
+++ b/views/landingView.html
@@ -24,8 +24,8 @@
 			<!-- Sección para colocar los botones de login / register / cerrar sesión / menú -->
 			<div id="control">
 				
-				<a href="?slug=login" class="btn_login">Login</a>
-				<a href="?slug=register" class="btn_register">Register</a>
+				<a href="login" class="btn_login">Login</a>
+				<a href="register" class="btn_register">Register</a>
 
 			</div>
 
