--- a/views/loginView.html
+++ b/views/loginView.html
@@ -18,7 +18,7 @@
 			
 			<!-- Seccion para colocar el logo -->
 			<div id="hero">
-				<a href="?slug=landing">
+				<a href="landing">
 					<img src="img/system/hero.png" alt="">
 				</a>
 			</div>
@@ -26,7 +26,7 @@
 			<!-- Sección para colocar los botones de login / register / cerrar sesión / menú -->
 			<div id="control">
 			
-				<a href="?slug=register" class="btn_register">Register</a>
+				<a href="register" class="btn_register">Register</a>
 
 			</div>
 
