--- a/views/panelView.html
+++ b/views/panelView.html
@@ -18,7 +18,7 @@
 			
 			<!-- Seccion para colocar el logo -->
 			<div id="hero">
-				<a href="?slug=landing">
+				<a href="landing">
 					<img src="img/system/hero.png" alt="">
 				</a>
 			</div>
@@ -26,7 +26,10 @@
 			<!-- Sección para colocar los botones de login / register / cerrar sesión / menú -->
 			<div id="control">
 			
-				<a href="?slug=logout" class="btn_login">Cerrar sesión</a>
+				<a href="perfil" class="btn_login">Perfil</a>
+
+				<a href="logout" class="btn_login">Cerrar sesión</a>
+
 			</div>
 
 		</div>
