--- a/views/perfilView.html
+++ b/views/perfilView.html
@@ -26,7 +26,7 @@
 
 			<div id="window__buttons">
 				
-				<a href="?slug=abandonar">
+				<a href="abandonar">
 					<div id="window__accept" class="btn__accept">Aceptar</div>
 				</a>
 
@@ -46,15 +46,15 @@
 			
 			<!-- Seccion para colocar el logo -->
 			<div id="hero">
-				<a href="?slug=landing">
+				<a href="landing">
 					<img src="img/system/hero.png" alt="">
 				</a>
 			</div>
 
 			<!-- Sección para colocar los botones de login / register / cerrar sesión / menú -->
 			<div id="control">
-			
-				<a href="?slug=logout" class="btn_login">Cerrar sesión</a>
+				<a href="panel" class="btn_login">Panel</a>
+				<a href="logout" class="btn_login">Cerrar sesión</a>
 			</div>
 
 		</div>
@@ -75,6 +75,7 @@
 				<div id="description">
 					<h1>Perfil</h1>
 
+					<img src="{{AVATAR}}" alt="">
 
 					<div class="error_form">{{MSG_ERROR_FORM}}</div>
 
