--- a/views/loginView.html
+++ b/views/loginView.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>LosApuntes - Login</title>
 
 	<link rel="stylesheet" type="text/css" href="views/static/css/styles.css">
 
@@ -49,11 +49,11 @@
 					<h1>Iniciar sesión</h1>
 					<form action="" method="POST">
 
-						<div class="error_form">{{MSG_ERROR_FORM}}</div>
+						<div id="error_msg" class="error_form"></div>
 						
-						<input type="email" placeholder="email" name="txt_email" required>
-						<input type="password" placeholder="password" name="txt_pass" required>
-						<input type="submit" name="btn_ingresar" value="ingresar">
+						<input id="email" type="email" placeholder="email" name="txt_email" required>
+						<input id="pass" type="password" placeholder="password" name="txt_pass" required>
+						<input id="btn_ingresar" type="submit" name="btn_ingresar" value="ingresar">
 
 					</form>
 				</div>
@@ -63,6 +63,48 @@
 		</div>
 
 	</div>
+
+	<script type="text/javascript">
+		
+		/*< Al presionar el botón de logueo */
+		btn_ingresar.addEventListener("click", e => {
+
+			/*< evita la recarga de la página */
+			e.preventDefault();
+
+			/*< Realiza el intento de logueo */
+			login(email.value, pass.value).then( data => {
+
+				// si el logueo fue valido
+				if(data.errno == 200){
+					/*< Redirecciona al panel */
+					window.location.href = 'panel';
+				}
+
+				/*< El logueo no fue valido, muestra el error */
+				error_msg.textContent = data.error;
+
+			} )
+		})
+
+		/**
+	 	 * 
+	 	 * @brief Realiza el logueo con el email y contraseña GET
+	 	 * @param string email correo electrónico del usuario
+	 	 * @param string pass contraseña del usuario
+	 	 * @return json respuesta del intento de logueo
+	 	 * 
+	 	 * */
+		async function login(email, pass){
+			/*< consulta a la API */
+			const response = await fetch("http://losapuntes.com.ar/api/user/login/?txt_email="+email+"&txt_pass="+pass);
+			/*< convierte la respuesta a formato json */
+			const data = await response.json();
+
+			return data;
+		}
+
+	</script>
 
 </body>
 </html>
