--- a/views/error404View.html
+++ b/views/error404View.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>LosApuntes - Error</title>
-</head>
-<body>
+@extern('header')
 
 	<h1>La seccion no existe</h1>
 
-</body>
-</html>
+@extern('footer')
